--- a/jwt-spring-boot-sample-app/pom.xml
+++ b/jwt-spring-boot-sample-app/pom.xml
@@ -38,7 +38,7 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.example</groupId>
+			<groupId>boojongmin</groupId>
 			<artifactId>jwt-spring-boot-starter</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
