--- a/jwt-spring-boot-starter/pom.xml
+++ b/jwt-spring-boot-starter/pom.xml
@@ -13,7 +13,7 @@
         <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
     </properties>
 
-    <groupId>com.example</groupId>
+    <groupId>boojongmin</groupId>
     <artifactId>jwt-spring-boot-starter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
